package com.DressManager.dressmanager.model.enums;

public enum Cor {
    VERMELHO,
    AZUL,
    VERDE,
    AMARELO,
    PRETO,
    BRANCO,
    CINZA,
    LARANJA,
    ROXO,
    ROSA
}
